# hank

./: .env.example  .gitignore  README.md  dev.sh  docker-compose.yml
.cursor/rules/: git-no-push-main.mdc
backend/: Dockerfile  pyproject.toml  token_server.py
backend/agent/: prompts.py  session_store.py  tutor.py  vision.py  worker.py
frontend/: .env.example  Dockerfile  README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/sessions/: route.ts
frontend/app/api/sessions/[id]/: route.ts
frontend/app/api/sessions/[id]/images/: route.ts
frontend/app/api/summary/: route.ts
frontend/app/api/token/: route.ts
frontend/components/: ErrorBanner.tsx  HankLogo.tsx  ImageUploadModal.tsx  SessionDetail.tsx  SessionView.tsx  SummaryPanel.tsx  SummarySection.tsx  Transcript.tsx  TutorRoom.tsx  Visualizer.tsx  WelcomeScreen.tsx
frontend/hooks/: useTranscriptHistory.ts
